manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: app
  name: app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external 
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - name: 80-80
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: app
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: ai
  name: ai-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
spec:
  ports:
    - name: 80-80
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: ai
  type: LoadBalancer
status:
  loadBalancer: {}
